--- a/src/components/login/index.css
+++ b/src/components/login/index.css
@@ -118,8 +118,7 @@
 }
 
 .login-page {
-  box-shadow:
-    8px 8px 16px rgba(0, 0, 0, 0.1),
+  box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.1),
     -8px -8px 16px rgba(255, 255, 255, 0.7);
   border-radius: 20px;
   padding: 40px;
