--- a/src/components/saved-videos-route/index.css
+++ b/src/components/saved-videos-route/index.css
@@ -262,9 +262,7 @@ hr {
   border: none;
   border-radius: 20px;
   cursor: pointer;
-  transition:
-    background-color 0.3s ease,
-    transform 0.5s ease;
+  transition: background-color 0.3s ease, transform 0.5s ease;
   font-family: 'Poppins', sans-serif;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   width: 150px;
@@ -287,9 +285,7 @@ hr {
   border: none;
   border-radius: 20px;
   cursor: pointer;
-  transition:
-    background-color 0.3s ease,
-    transform 0.2s ease;
+  transition: background-color 0.3s ease, transform 0.2s ease;
   font-family: 'Poppins', sans-serif;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   width: 150px;
