--- a/src/components/eachMovie/index.css
+++ b/src/components/eachMovie/index.css
@@ -5,6 +5,14 @@
   background-color: white;
 }
 
+.play-cancel{
+  display: flex;
+  justify-content: space-between;
+  width: 70px;
+}
+
+
+
 .nav-div {
   height: 120vh;
 }
@@ -174,6 +182,15 @@
   justify-content: center;
   align-items: center;
 }
+
+.loader-container {
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 
 .indivisual-suggestion-card {
   display: flex;
